# chat

./: CMakeLists.txt  README.md  dump.rdb
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: connectionpool.hpp  db.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: connectionpool.cpp  db.cpp  mysql_conn.conf
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/: client.c  server.c
